# FMU_agent

./: .gitignore  CMakeLists.txt  DoubleMassSpringDamper.fmu  README.md  mads_package.json
.github/workflows/: release.yml
models/: .gitignore  CMakeLists.txt  linear_axis.fmu
models/DoubleMassSpringDamper/: modelDescription.xml
models/DoubleMassSpringDamper/binaries/aarch64-darwin/: DoubleMassSpringDamper.dylib
models/DoubleMassSpringDamper/documentation/: index.html
models/DoubleMassSpringDamper/sources/: DoubleMassSpringDamper.c  DoubleMassSpringDamper.h  DoubleMassSpringDamper_data.c  DoubleMassSpringDamper_fmu.c  DoubleMassSpringDamper_macros.h  DoubleMassSpringDamper_private.h  DoubleMassSpringDamper_types.h  RTWCG_FMU_util.c  RTWCG_FMU_util.h  buildDescription.xml  rtmodel.h
models/linear_axis/: modelDescription.xml
models/linear_axis/binaries/aarch64-darwin/: linear_axis.dylib
models/linear_axis/documentation/: index.html
models/linear_axis/sources/: RTWCG_FMU_util.c  buildDescription.xml  linear_axis.c  linear_axis.h  linear_axis_data.c  linear_axis_fmu.c  linear_axis_macros.h  linear_axis_private.h  linear_axis_types.h  rtmodel.h
models/machine_tool/: modelDescription.xml
models/machine_tool/binaries/aarch64-darwin/: machine_tool.dylib
models/machine_tool/documentation/: index.html
models/machine_tool/sources/: RTWCG_FMU_util.c  RTWCG_util_functions.h  buildDescription.xml  machine_tool.c  machine_tool.h  machine_tool_data.c  machine_tool_fmu.c  machine_tool_macros.h  machine_tool_private.h  machine_tool_types.h  rtmodel.h
src/: FmuInstance.cpp  FmuInstance.hpp  test.cpp
src/compat/toml++/: toml.hpp
src/main/: CMakeLists.txt  fmu_agent.cpp  test.cpp
